<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
            android:id="@+id/navigationMenuGroup"
            android:visible="true"
            android:checkableBehavior="none">

        <item
              android:id="@+id/fragment_towards_welcome_or_welcome_back_view"
              android:title="@string/goHomeMenuItemName"
              android:icon="@drawable/menu_item_icon"/>

        <item
                android:id="@+id/fragment_towards_add_expense_view"
                android:icon="@drawable/menu_item_icon"
                android:title="@string/addAnExpenseMenuItemName"
                android:orderInCategory="2" />

        <item
                android:id="@+id/fragment_towards_review_expenses_view"
                android:icon="@drawable/menu_item_icon"
                android:title="@string/inDepthReviewMenuItem"
                android:orderInCategory="3" />

        <item
                android:id="@+id/fragment_towards_configure_your_categories_view"
                android:icon="@drawable/menu_item_icon"
                android:title="@string/configureYourCategoriesMenuItemName"
                android:orderInCategory="4"/>
    </group>
</menu>