<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/backgroundOne"
              android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutForHeading"
                android:layoutDirection="ltr"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@color/highlightOne"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/menuButtonForNavigation"
                    android:layout_width="52dp"
                    android:layout_height="65dp"
                    app:icon="@drawable/menu_icon"
                    style="@style/transparentAppButton"
                    android:gravity="center"
                    app:iconTint="@color/inputFieldColor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="52dp"
                    android:layout_marginStart="32dp"/>
            <TextView
                    android:text="@string/appAddYourExpenseTitle"
                    android:hint="@string/appAddYourExpenseTitle"
                    android:layout_width="310dp"
                    android:layout_height="122dp" android:id="@+id/yourGoalsTextViewForModifyingWithNoMessage"
                    android:fontFamily="@font/inter_bold"
                    android:textSize="50sp"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/textColor"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="1dp"
                    app:layout_constraintStart_toEndOf="@+id/menuButtonForNavigation"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="24dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout android:layout_width="390dp"
                      android:layout_height="0dp"
                      android:layout_marginBottom="20dp"
                      android:id="@+id/linearLayoutForExpenseParameter"
                      android:background="@drawable/rounded_corners_for_constrained_layout"
                      android:orientation="vertical"
                      tools:layout_editor_absoluteY="206dp"
                      android:layout_marginEnd="10dp"
                      app:layout_constraintBottom_toBottomOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toStartOf="@id/constraintLayoutForHeading"
                      app:layout_constraintTop_toBottomOf="@id/constraintLayoutForHeading"
                      android:layout_marginStart="10dp"
                      android:layout_marginTop="20dp"
                      android:padding="20dp"
                      app:layout_constraintHorizontal_bias="0.0">

            <!--Heading, botones e input line para expense category-->
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:fontFamily="@font/inter"
                      android:textColor="@color/textColor"
                      android:textSize="16sp"
                      android:text="@string/appSelectYourCategoryComboboxHeader"
            />
            <Space android:layout_width="match_parent" android:layout_height="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addAnExpenseSelectExpenseCategoryTextInputLayoutManager"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:boxStrokeColor="@android:color/transparent"
                    app:boxStrokeWidth="0dp"
                    android:background="@drawable/rounded_corners_for_text_input"
                    android:layout_marginTop="8dp">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/addAnExpenseViewSelectExpenseCategoryAutoCompleteTextView"
                        android:paddingStart="10dp"
                        android:textColor="@color/textColor"
                        android:layout_width="match_parent"
                        android:hint="@string/appSelectYourCategoryComboboxPlaceholder"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:textAlignment="gravity"
                        android:background="@drawable/rounded_corners_for_text_input"
                        android:focusable="false"
                        android:clickable="true"
                        android:inputType="none"
                        android:editable="false"
                />
            </com.google.android.material.textfield.TextInputLayout>
            <Space android:layout_width="match_parent" android:layout_height="15dp"/>
            <!-- Fields for date time chooser-->
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:fontFamily="@font/inter"
                      android:textSize="16sp"
                      android:textColor="@color/textColor"
                      android:text="@string/appSelectYourExpenseDateDatePickerHeader"
            />
            <Space android:layout_width="match_parent" android:layout_height="15dp"/>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addAnExpenseSelectExpenseDateTextInputLayoutManager"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:boxStrokeColor="@android:color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/calendar_icon"
                    app:endIconScaleType="fitEnd"
                    app:endIconTint="@color/backgroundTwo"
                    app:endIconTintMode="src_atop"
                    app:hintEnabled="true"
                    app:hintAnimationEnabled="true"
            >
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/addAnExpenseViewSelectExpenseDateTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/rounded_corners_for_text_input"
                        android:paddingStart="10dp"
                        android:focusable="false"
                        android:clickable="true"
                        android:editable="false"
                        android:hint="@string/appSelectYourExpenseDatePickerPlaceholder"
                        android:inputType="date"
                />
            </com.google.android.material.textfield.TextInputLayout>
            <Space android:layout_width="match_parent" android:layout_height="15dp"/>
            <!-- Fields for money input chooser-->
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@color/textColor"
                      android:fontFamily="@font/inter"
                      android:textSize="16sp"
                      android:text="@string/appSelectYourExpenseAmountHeader"
            />
            <Space android:layout_width="match_parent"
                   android:layout_height="15dp"/>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addAnExpenseRegisterExpenseAmountTextInputlayoutManager"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:boxStrokeColor="@android:color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
            >
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/addAnExpenseViewRegisterExpenseAmountTextInputEditText"
                        android:background="@drawable/rounded_corners_for_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="10dp"
                        android:hint="@string/appSelectYourExpenseAmountPlaceholder"
                        android:inputType="numberDecimal"
                />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- Buttons for Adding or Canceling-->
            <Space android:layout_width="match_parent" android:layout_height="25dp"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|end"
                    android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                        android:id="@+id/addAnExpenseCancelExpenseRegistrationMaterialButton"
                        android:backgroundTint="@color/backgroundTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:fontFamily="@font/inter_light"
                        android:textColor="@color/inputFieldColor"
                        android:text="@string/cancelRegistrationLabel"
                        android:textSize="14sp"
                />
                <com.google.android.material.button.MaterialButton
                        android:id="@+id/addAnExpenseSaveExpenseMaterialButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/textColor"
                        android:textAllCaps="false"
                        android:fontFamily="@font/inter_light"
                        android:textColor="@color/inputFieldColor"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/saveExpenseLabel"
                        android:textSize="14sp"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:itemIconSize="24dp"
            app:itemIconTint="@color/highlightOne"
            app:itemTextColor="@color/textColor"
            app:itemHorizontalPadding="16dp"
            app:itemVerticalPadding="8dp"
            style="@style/CustomNavigationView"
            app:menu="@menu/nav_menu" />
</androidx.drawerlayout.widget.DrawerLayout>