<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
android:background="@color/backgroundOne">


    <!--Organizacion de Seccion Principal-->

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundOne">

        <!--Anadimos un mensaje bonito y los progress bars en ejecucion-->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutForHeading"
                android:layoutDirection="ltr"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:layout_height="wrap_content"
                android:background="@color/highlightOne"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintVertical_bias="1.0"
        >

            <com.google.android.material.button.MaterialButton
                    android:accessibilityPaneTitle="@string/app_name"
                    android:id="@+id/menuButtonForNavigation"
                    android:hint="@string/app_name"
                    android:layout_width="52dp"
                    android:layout_height="65dp"
                    app:icon="@drawable/menu_icon"
                    style="@style/transparentAppButton"
                    android:gravity="center_vertical|end"
                    app:iconTint="@color/highlightTwo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/welcomeOrWelcomeBackViewHeadingTextView"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    android:layout_marginStart="4dp"/>
            <TextView
                    android:text="@string/appWelcomeMessage"
                    android:layout_width="310dp"
                    android:layout_height="122dp"
                    android:id="@+id/welcomeOrWelcomeBackViewHeadingTextView"
                    android:fontFamily="@font/inter_bold"
                    android:textSize="50sp"
                    android:textAlignment="gravity"
                    android:gravity="end|center_vertical"
                    android:textColor="@color/textColor"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/menuButtonForNavigation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintVertical_bias="1.0"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="0dp"
                      android:layout_marginBottom="20dp"
                      android:background="@drawable/rounded_corners_for_constrained_layout"
                      android:id="@+id/linearLayoutForProgressBars"
                      android:orientation="vertical"
                      android:layout_marginEnd="10dp"
                      app:layout_constraintBottom_toBottomOf="parent"
                      app:layout_constraintLeft_toRightOf="parent"
                      app:layout_constraintRight_toLeftOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toBottomOf="@id/constraintLayoutForHeading"
                      android:layout_marginStart="10dp"
                      android:layout_marginTop="20dp"
                      android:padding="20dp"
                      app:layout_constraintHorizontal_bias="0.498"
                      app:layout_constraintVertical_bias="0.0">
            <TextView
                    android:id="@+id/welcomeOrWelcomeBackViewCurrentGoalsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/appNoGoalsMessage"
                    android:textColor="@color/textColor"
                    android:fontFamily="@font/inter_bold"
                    android:textSize="30sp"
            />
            <ScrollView
                    android:id="@+id/welcomeOrWelcomeBackViewScrollViewForInfo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <LinearLayout
                        android:id="@+id/welcomeOrWelcomeBackInternalLinearLayoutForProgressBars"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp"/>

            </ScrollView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="wrap_content"
            style="@style/CustomNavigationView"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"

            app:itemHorizontalPadding="16dp"
            app:itemVerticalPadding="8dp"
            app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>